<resources>
    <string name="app_name">HelloWorld</string>
    <string name="mainpicture">mainpicture</string>
    <string name="temperature">+19</string>
    <string-array name="cities">
        <item>Ессентуки</item>
        <item>Essentuki</item>
        <item>Москва</item>
        <item>Moscow</item>
        <item>Пятигорск</item>
        <item>Pyatigorsk</item>
        <item>Saint-Peterburg</item>
        <item>Санкт Петербург</item>
    </string-array>
    <string-array name="daysofweek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>


    <string name="weather">Облачно</string>
    <string name="enterCityName">Введите название города</string>
    <string name="select_city">Выберите город</string>
    <string name="enter_city_name">Введите название города</string>
    <string name="Pyatigorsk">Pyatigorsk</string>
    <string name="Essentuki">Essentuki</string>
    <string name="Moscow">Moscow</string>
    <string name="St_P">Saint Petersburg</string>
    <string name="gradus_forengheit">0°C</string>
    <string name="forengheight">90F</string>
    <string name="sunday">Воскресенье</string>
    <string name="daysofmounth">9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27</string>
    <string name="info">Информация о скорости ветра и давлении   </string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема Светлая/Темная</string>
    <string name="font">Шрифт Нормальный/Крупный</string>
    <string name="C_F">Температура в Цельсиях/Форенгейт</string>
    <string name="sunny">sunny</string>
    <string name="saturday">Суббота</string>
    <string name="friday">Пятница</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="_3_2_1_0_1_2_3_5_7_9_11_13_15_18_13_12">-3 -2 -1 0 1 2 3 5 7 9 11 13 15 18 13 12 -3 -2 -1 -5 -6 -8 -4 -3</string>
    <string name="_3">-3</string>
    <string name="_10">10</string>
    <string name="_0">0</string>
    <string name="_2">-2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_1">-1</string>
    <string name="_m2">2</string>
    <string name="save_changes">OK</string>
    <string name="aboutcity">Узнать о городе</string>
    <string name="cityinputerror">В названии города допущены ошибки</string>
    <string name="savesettins">Сохранить настройки?</string>
    <string name="now">Сейчас</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
