<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/themecolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/theme"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/fontsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/unitofmeasure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C_F"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/savesettings_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_gravity="center"
        />
</LinearLayout>