<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeatherFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorPrimary"
    android:gravity="top"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorPrimary">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_3"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_10"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_2"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_3"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_1"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_0"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_m2"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="30"
                android:contentDescription="@string/sunny"
                android:src="@drawable/cloudandsun"
                tools:src="@drawable/cloudandsun"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/_2"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>
