<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selectcity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:text="@string/select_city"
        android:textColor="@color/textcolorPrimary"
        android:textSize="24sp"></TextView>

    <AutoCompleteTextView
        android:id="@+id/citychanger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="@string/city"
        android:gravity="center"
        android:hint="@string/enter_city_name"
        android:paddingTop="20dp"
        android:textColor="@color/textcolorPrimary" />

    <TextView
        android:id="@+id/city1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="20dp"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="20sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/city2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/City"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="20sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/city3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/Moscow"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="20sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/city4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="5dp"
        android:text="@string/St_P"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="20sp"
        android:focusable="true" />

    <Switch
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingTop="30dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/textcolorPrimary"
        android:textSize="14sp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/savecity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/save_changes"
        android:textAlignment="center" />

</LinearLayout>