<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorPrimary"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_weight="2"
        android:contentDescription="@string/sunny"
        android:src="@drawable/cloudandsun"
        tools:src="@drawable/cloudandsun" />

    <TextView
        android:id="@+id/mintemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_3"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_10"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />
</LinearLayout>
