<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/clouds"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/weather_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/temperatureOfDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradus_forengheit"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>